info row alignment fix

--- a/src/pages/Home/Header/styles.module.css
+++ b/src/pages/Home/Header/styles.module.css
@@ -91,7 +91,6 @@
   display: flex;
   flex-direction: row;
   width: 75%;
-  left: calc(25vw - 0px);
   position: absolute;
   top: calc(85vh - 5rem);
 }
